--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.nugraviton</groupId>
     <artifactId>playground-release-plugin</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Spring Boot Blank Project (from https://github.com/making/spring-boot-blank)</name>
@@ -18,7 +18,7 @@
     <scm>
         <developerConnection>scm:git:https://github.com/nugraviton/playground.git</developerConnection>
         <connection>scm:git:https://github.com/nugraviton/playground.git</connection>
-        <tag>playground-release-plugin-1.0</tag>
+        <tag>**</tag>
         <url>https://github.com/nugraviton/playground</url>
     </scm>
 
