--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Spring Boot Blank Project (from https://github.com/making/spring-boot-blank)</name>
+    <name>Spring Boot Blank Project</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -21,7 +21,13 @@
         <tag>**</tag>
         <url>https://github.com/nugraviton/playground</url>
     </scm>
-
+    <distributionManagement>
+        <repository>
+            <id>pkg.github.com</id>
+            <name>GitHub nbauma109 Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/nugraviton/playground</url>
+        </repository>
+    </distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
