--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                    <tagNameFormat>release/{project.version}</tagNameFormat>
+                    <tagNameFormat>release/@{project.version}</tagNameFormat>
                     <releaseProfiles>release</releaseProfiles>
                 </configuration>
             </plugin>
