--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
                     <tagNameFormat>release/@{project.version}</tagNameFormat>
-                    <releaseProfiles>release</releaseProfiles>
+                    <!--releaseProfiles>release</releaseProfiles-->
                 </configuration>
             </plugin>
         </plugins>
